# NOTEBOOK-LENS

./: .gitignore  README.md  pyproject.toml
notebooks/agent_rounds/20260615_round10/: docs_help_remote.ipynb  empty_source_edges.ipynb  env_sync_edges.ipynb  local_nonempty_stdin.ipynb  remote_file_workflow.ipynb
notebooks/agent_rounds/20260615_round11/: compressed_state_postfix.ipynb  recovery_ux.ipynb  serve_compat.ipynb
notebooks/agent_rounds/20260615_round2/: data_validation.ipynb  failure_recovery.ipynb  hf_embedding.ipynb  hf_text.ipynb  ml_sweep.ipynb
notebooks/agent_rounds/20260615_round3/: failure_hint.ipynb  file_error.ipynb  hf_stderr.ipynb  ml_artifact_env.ipynb  update_stale.ipynb
notebooks/agent_rounds/20260615_round4/: artifact_lifecycle.ipynb  help_surface.ipynb  inferred_scope.ipynb
notebooks/agent_rounds/20260615_round5/: artifact_lifecycle_v2.ipynb  (+2 more)
notebooks/heavy/: hf_embedding_eval.ipynb  hf_streaming_text.ipynb  hf_vision_stream.ipynb
notebooks/manual/: 1.ipynb
notebooks/ml_tasks/: baseline_training.ipynb  batch_inference_artifacts.ipynb  data_validation_drift.ipynb  evaluation_error_analysis.ipynb  hyperparameter_sweep.ipynb  torch_training_loop.ipynb
notebooks/round4_general/: fallback_artifacts.ipynb
notebooks/round5_general/: generic_scope.ipynb
src/notebook_lens/: __init__.py  artifacts.py  cell_state.py  cli.py  command_render.py  commands.py  env.py  env_policy.py  errors.py  executor.py  guidance.py  locks.py  notebooks.py  rich_export.py  rich_output.py  serialize.py  session.py  source_io.py  state.py  text_render.py
(+20 files in other folders)
